[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/ui/toolbox/panels/hawker_center_control_panel.gd" type="Script" id=1]

[node name="HawkerCenterControlPanel" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="Label" type="Label" parent="CenterContainer"]
visible = false
margin_left = 473.0
margin_top = 353.0
margin_right = 806.0
margin_bottom = 367.0
text = "HAWKER CENTER CONTROL PANEL - COMING SOON!"

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_left = 587.0
margin_top = 326.0
margin_right = 693.0
margin_bottom = 394.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
margin_right = 106.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( -504, -96 )

[node name="Button_OpenCloseCenter" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_right = 106.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
toggle_mode = true
pressed = true
enabled_focus_mode = 0
text = "Close Center"

[node name="Button_OpenAllStalls" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 106.0
margin_bottom = 44.0
focus_mode = 0
enabled_focus_mode = 0
text = "Open All Stalls"

[node name="Button_CloseAllStalls" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 106.0
margin_bottom = 68.0
focus_mode = 0
enabled_focus_mode = 0
text = "Close All Stalls"

[connection signal="toggled" from="CenterContainer/MarginContainer/VBoxContainer/Button_OpenCloseCenter" to="." method="_on_Button_OpenCloseCenter_toggled"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Button_OpenAllStalls" to="." method="_on_Button_OpenAllStalls_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Button_CloseAllStalls" to="." method="_on_Button_CloseAllStalls_pressed"]
